--- a/scripts/ost_config.in
+++ b/scripts/ost_config.in
@@ -38,7 +38,7 @@ export LD_LIBRARY_PATH="$DNG_LIBDIR:${LD_LIBRARY_PATH}"
 
 
 # retrieve absolute path to python executable
-pyexec="@Python_EXECUTABLE@"
+pyexec=`which python`
 
 if [ ! -x "$pyexec" ]; then 
   echo "Error: Python executable '$pyexec' not found!"
